--- a/package.json
+++ b/package.json
@@ -5,7 +5,50 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prettier-fix": "prettier --write \"**/*.{js,jsx,json,ts,tsx,md,mdx,css,html,yml,yaml,scss}\" \"!\\.next/**\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "eslintConfig": {
+    "extends": "eslint:recommended"
+  },
+  "eslintIgnore": [
+    "node_modules",
+    "coverage",
+    "dist",
+    "build",
+    "docs",
+    ".vscode",
+    ".github",
+    ".idea",
+    ".storybook"
+  ],
+  "prettier": {
+    "printWidth": 80,
+    "tabWidth": 2,
+    "useTabs": false,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "bracketSpacing": true,
+    "proseWrap": "always",
+    "jsxSingleQuote": false,
+    "jsxBracketSameLine": false,
+    "quoteProps": "as-needed",
+    "htmlWhitespaceSensitivity": "css",
+    "arrowParens": "avoid"
+  },
+  "lint-staged": {
+    "**/*.+(js|ts|tsx|jsx)": [
+      "eslint --fix",
+      "prettier --write --ignore-unknown"
+    ],
+    "**/*.+(css|sass|less|scss|json|html|jsx)": [
+      "prettier --write --ignore-unknown"
+    ]
   },
   "dependencies": {
     "@types/node": "^14.14.20",
@@ -14,5 +57,50 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.10.4",
+    "@jackfranklin/test-data-bot": "^1.3.0",
+    "@testing-library/cypress": "^6.0.0",
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^10.4.7",
+    "@testing-library/react-hooks": "^3.3.0",
+    "@testing-library/user-event": "^12.0.11",
+    "@types/jest": "^26.0.4",
+    "@types/jest-axe": "^3.2.2",
+    "@types/node": "^14.0.23",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "@types/recharts": "^1.8.16",
+    "@types/styled-components": "^5.1.1",
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.x",
+    "babel-eslint": "10.x",
+    "eslint": "6.x",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-config-typescript": "^3.0.0",
+    "eslint-plugin-cypress": "^2.11.1",
+    "eslint-plugin-flowtype": "4.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "2.x",
+    "eslint-plugin-testing-library": "^3.3.1",
+    "husky": "^4.2.5",
+    "identity-obj-proxy": "^3.0.0",
+    "is-ci-cli": "^2.1.2",
+    "jest": "^26.1.0",
+    "jest-axe": "^3.4.0",
+    "jest-emotion": "^10.0.32",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "jest-styled-components": "^7.0.2",
+    "jest-watch-select-projects": "^2.0.0",
+    "jest-watch-typeahead": "^0.6.0",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
+    "react-query-devtools": "^2.6.1",
+    "react-test-renderer": "^16.9.0"
   }
 }
