--- a/package.json
+++ b/package.json
@@ -53,9 +53,15 @@
   "dependencies": {
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
+    "firebase": "^8.2.2",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "react-redux-firebase": "^3.9.0",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.14.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
@@ -101,6 +107,7 @@
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "react-query-devtools": "^2.6.1",
-    "react-test-renderer": "^16.9.0"
+    "react-test-renderer": "^16.9.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
