--- a/package.json
+++ b/package.json
@@ -51,10 +51,14 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.3.2",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "date-fns": "^2.17.0",
     "firebase": "^8.2.2",
+    "framer-motion": "^3.3.0",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
