--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react": "^17.0.0",
     "date-fns": "^2.17.0",
     "firebase": "^8.2.2",
+    "framer": "^1.2.20",
     "framer-motion": "^3.3.0",
     "next": "10.0.4",
     "react": "17.0.1",
