--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "framer": "^1.2.20",
     "framer-motion": "^3.3.0",
     "next": "10.0.4",
+    "rc-pagination": "^3.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
