--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@emotion/styled": "^11.1.5",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
+    "axios": "^0.21.1",
     "date-fns": "^2.17.0",
     "firebase": "^8.2.2",
     "framer": "^1.2.20",
