--- a/package.json
+++ b/package.json
@@ -58,10 +58,12 @@
     "@types/react": "^17.0.0",
     "axios": "^0.21.1",
     "date-fns": "^2.17.0",
-    "firebase": "^8.2.2",
+    "firebase": "^8.2.7",
+    "firebase-admin": "^9.5.0",
     "framer": "^1.2.20",
     "framer-motion": "^3.3.0",
     "next": "10.0.4",
+    "nookies": "^2.5.2",
     "rc-pagination": "^3.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
