--- a/package.json
+++ b/package.json
@@ -51,9 +51,7 @@
     ]
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.3.4",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
+    "@material-ui/core": "^4.11.3",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "axios": "^0.21.1",
@@ -61,7 +59,6 @@
     "firebase": "^8.3.0",
     "firebase-admin": "^9.5.0",
     "framer": "^1.2.20",
-    "framer-motion": "^3.10.3",
     "next": "10.0.4",
     "nookies": "^2.5.2",
     "rc-pagination": "^3.1.3",
