--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "main": "index.js",
   "name": "ujali-pro-v2",
   "version": "0.1.0",
   "private": true,
@@ -51,7 +52,9 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
+    "@chakra-ui/react": "^1.4.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "axios": "^0.21.1",
@@ -59,11 +62,13 @@
     "firebase": "^8.3.0",
     "firebase-admin": "^9.5.0",
     "framer": "^1.2.20",
-    "next": "10.0.4",
+    "framer-motion": "^4",
+    "next": "^10.0.9",
     "nookies": "^2.5.2",
     "rc-pagination": "^3.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.9.0",
     "react-toast-notifications": "^2.4.3",
