--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
     "redux-thunk": "^2.3.0",
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.2.3",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
