--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@emotion/styled": "^11",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
+    "@types/react-select": "^4.0.15",
     "axios": "^0.21.1",
     "date-fns": "^2.19.0",
     "firebase": "^8.3.0",
@@ -71,6 +72,7 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.9.0",
+    "react-select": "^4.3.0",
     "react-toast-notifications": "^2.4.3",
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
