--- a/package.json
+++ b/package.json
@@ -55,11 +55,12 @@
     "@chakra-ui/react": "^1.4.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@types/date-fns": "^2.6.0",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-select": "^4.0.15",
     "axios": "^0.21.1",
-    "date-fns": "^2.19.0",
+    "date-fns": "^2.21.1",
     "firebase": "^8.3.0",
     "firebase-admin": "^9.5.0",
     "framer": "^1.2.20",
