--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "nookies": "^2.5.2",
     "rc-pagination": "^3.1.3",
     "react": "17.0.1",
+    "react-calendar": "^3.4.0",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
