--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.9.0",
     "react-select": "^4.3.0",
+    "react-stars": "^2.2.5",
     "react-toast-notifications": "^2.4.3",
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
